tests/constructor/call_constructor_outside_struct.rev
struct Foo {
    fn init() {}
}

var f = Foo().init() // error: can't call the constructor directly